[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestureflow-openenv"
version = "2.1.0"
description = "Submission-ready OpenEnv gesture-to-text workflow environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2,<3",
  "openai>=1.30.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "server*"]